# senior-tinder-backend

./: .env.example  .gitignore  alembic.ini  pyproject.toml  railway.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
.lsp/.cache/: db.transit.json
alembic/: env.py
alembic/versions/: 1794dc2b08fc_add_chat_messages_table.py  23c23f355635_add_sms_verifications.py  a007cc9c9a91_init.py  b91fe51169d6_update_manner_history_add_columns.py  c1a2b3d4e5f6_rename_manner_to_trust.py  d2e3f4a5b6c7_add_nickname_to_users.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  auth.py  base.py  manner.py  matching.py  payment.py  point.py  report.py  user.py
app/routers/: auth.py  block.py  chat.py  internal.py  matching.py  payment.py  point.py  report.py  users.py
app/schemas/: auth.py  block.py  internal.py  matching.py  payment.py  point.py  report.py  users.py
app/services/: auth.py  block.py  fcm.py  internal.py  manner.py  matching.py  payment.py  point.py  report.py  sms.py  users.py
scripts/: seed.py
