[project]
name = "senior-tinder"
version = "0.1.0"
description = "Senior Tinder FastAPI Backend"
requires-python = "==3.11.*"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic-settings==2.3.0",
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    "psycopg2-binary==2.9.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "boto3==1.34.0",
    "solapi==5.0.3",
    "google-cloud-vision==3.7.0",
    "firebase-admin==6.5.0",
    "httpx==0.28.1",
    "python-multipart==0.0.9",
    "sentry-sdk[fastapi]==2.8.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
